# SW_SystemC_Project

./: .clang-format  CMakeLists.txt  main.cpp  style.xml
include/: App.hpp  Controller.hpp  Fifo.hpp  IFifoRead.hpp  IFifoWrite.hpp  InputModule.hpp  OutputModule.hpp  Time.hpp  TimeSwitchTask.hpp
sandbox/: CMakeLists.txt  sandbox1.cpp  sandbox2.cpp
src/: App.cpp  Controller.cpp  Fifo.cpp  InputModule.cpp  OutputModule.cpp  Time.cpp  TimeSwitchTask.cpp  main.cpp
